--- a/pages/v2.md
+++ b/pages/v2.md
@@ -6,7 +6,25 @@ permalink: /v2
 
 ## Forslag til en national løsning
 
-- Fælles afsender til både MitID og mail
-- Adgang via både API og GUI-klient via API-nøgle
-- Mulighed for at override fælles MitID-afsender
+### MitID
+1. Fælles afsender til MitID
+2. Individuelle links fra de enkelte medlemmer (fås via de respektive kommuner)
+3. Mulighed for begge løsninger
 
+### Mail
+1. Fælles oda.dk- eller smartarkivering.dk-afsender
+2. kan ikke rigtig se andre alternativer...
+
+### API
+Er det nødvendigt i en første version, eller skal vi bare starte med et web-baseret admin-interface?
+
+### Administration
+- Skal man kunne se historikken af modtagne afleveringer?
+- Skal man kunne sende mails til giveren, når afleveringen er processeret? (færdigregistreret, tilgængeliggjort...)
+- Skal alle standard brugerfunktioner implementeres (opret, slet, glemt kodeord...)?
+
+### Formular
+Samme formularfunktionalitet som OS2Forms, men nu enkeltstående.
+
+### Custom url
+Skal vi forsøge at understøtte lokale subdomæner, så en formular eksempelvis kan ligge på aflever.aarhusstadsarkiv.dk?
