--- a/pages/v2.md
+++ b/pages/v2.md
@@ -4,7 +4,7 @@ layout: default
 permalink: /v2
 ---
 
-## Forslag til en national løsning
+Forslag til version 2 af Smartarkivering.
 
 ### MitID
 1. Fælles afsender til MitID
